# EEPicROM

./: .gitignore  README.md
schematic/: EEPicROM.kicad_prl  EEPicROM.kicad_pro  EEPicROM.kicad_sch  EEPicROM.kicad_sym  sym-lib-table
src/: CMakeLists.txt  EEPicROM.c  ROM.txt  test_rom.hex  writer.py
